# gmock_intro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _gcc_gen.sh  _msvc_gen.bat
source/: CMakeLists.txt  mylib.cpp  mylib.h
source/mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h
source/netlib/: CMakeLists.txt  netlib.cpp  netlib.h
source_tests/: mathlib.gtest.cpp  mylib.gtest.cpp  netlib.gtest.cpp
